[gd_scene load_steps=13 format=3 uid="uid://bqkidmy2reqv7"]

[ext_resource type="Script" path="res://entities/enemy/simple_enemy.gd" id="1_g6d10"]
[ext_resource type="Texture2D" uid="uid://2j74uc8bvtrr" path="res://assets/alien A.png" id="2_260li"]
[ext_resource type="Script" path="res://entities/components/life.gd" id="3_yi41b"]
[ext_resource type="Script" path="res://entities/components/movement_top_down.gd" id="4_8cnqu"]
[ext_resource type="Script" path="res://entities/enemy/behaviours/ia_movement_horizontal.gd" id="5_dqj7s"]
[ext_resource type="Script" path="res://entities/enemy/behaviours/enemy_intelligence.gd" id="6_braof"]
[ext_resource type="PackedScene" uid="uid://fum0l3hil4ye" path="res://entities/actions/kick/kick.tscn" id="7_g73fm"]
[ext_resource type="Script" path="res://entities/components/rotation.gd" id="8_pud8v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ww7nc"]
radius = 44.1022

[sub_resource type="CircleShape2D" id="CircleShape2D_fcc70"]
radius = 74.0608

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xnl3t"]
radius = 12.0
height = 138.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ktvbd"]
radius = 14.0

[node name="Enemy" type="CharacterBody2D"]
rotation = 1.5708
script = ExtResource("1_g6d10")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
texture = ExtResource("2_260li")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("CircleShape2D_ww7nc")

[node name="HurtBox" type="Area2D" parent="."]
rotation = -1.5708
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_fcc70")
debug_color = Color(0.941572, 0.209211, 0.319502, 0.42)

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(82, -3.58433e-06)
rotation = -1.5708
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xnl3t")

[node name="Life" type="Node" parent="."]
script = ExtResource("3_yi41b")
max_life = 1
on_hit_invecibility_time = 0

[node name="Movement" type="Node" parent="."]
script = ExtResource("4_8cnqu")
speed = 150.0

[node name="IAMovementHorizontal" type="Node" parent="."]
script = ExtResource("5_dqj7s")
movement_length = 150.0

[node name="ActionManagers" type="Node" parent="."]
script = ExtResource("6_braof")

[node name="Kick" parent="." instance=ExtResource("7_g73fm")]
unique_name_in_owner = true
visible = false
position = Vector2(82, 57)
rotation = -1.5708
shape = SubResource("CircleShape2D_ktvbd")
target_position = Vector2(114, 0)
cooldown_seconds = 0.1

[node name="Rotation" type="Node" parent="."]
script = ExtResource("8_pud8v")
min_angle = 10
max_angle = 170
rotation_speed = 1.0

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="area_entered" from="AttackArea" to="ActionManagers" method="_on_area_2d_area_entered"]
[connection signal="death" from="Life" to="." method="_on_death"]
[connection signal="move" from="IAMovementHorizontal" to="Movement" method="move"]
[connection signal="kicked" from="Kick" to="." method="on_kick"]
